--- a/public/hangman.html
+++ b/public/hangman.html
@@ -523,7 +523,7 @@
         .keyboard {
             display: grid;
             grid-template-columns: repeat(10, 1fr);
-            gap: 4px;
+            gap: 3px;
             margin: 8px 0;
             max-width: 100%;
         }
@@ -533,12 +533,13 @@
             border: none;
             background: linear-gradient(135deg, #4a5d6c 0%, #3d4d5c 100%);
             color: white;
-            font-size: 11px;
+            font-size: 13px;
             font-weight: bold;
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-            min-height: 24px;
+            min-height: 22px;
+            max-height: 32px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
         }
 
@@ -762,8 +763,9 @@
             }
             
             .key {
-                font-size: 10px;
-                min-height: 24px;
+                font-size: 12px;
+                min-height: 20px;
+                max-height: 28px;
             }
 
             .word-display {
@@ -850,8 +852,9 @@
             }
 
             .key {
-                font-size: 9px;
-                min-height: 22px;
+                font-size: 11px;
+                min-height: 18px;
+                max-height: 26px;
                 border-radius: 5px;
             }
 
